--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <!-- Basic -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
+    <meta name="theme-color" content="#323232" />
+    <meta name="full-screen" content="yes" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png" />
+
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A result oriented 7+ years of professional experience in UI/ Front End Web Development using different types of Web Technologies.
+          Strong development and hands on experience in HTML5, CSS3, Media Queries, Bootstrap, JavaScript and jQuery.
+          Expertise in debugging and troubleshooting existing code using Firebug and Developer Tools.
+          Strong experience with Cross Browser Compatibility issues and Optimization for web, including CSS Sprites and best practices of Responsive Web Design (RWD).
+          Well experienced in using version control systems subversion (SVN).
+          Working experience in parallax scrolling single page websites and web portals.
+          Independent problem solving ability and easily adopting new technologies.
+          Working on E-Commence and Healthcare domain.
+          Good understanding of OOPS Concept and Database.
+          Good understanding of Web application development cycle.
+          Areas worked on - React JS, Angular, JavaScript, jQuery, Bootstrap, HTML5, CSS3/SASS/SCSS/LESS "
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      name="keywords"
+      content="User Interface Developer, UI Developer, UI Expertise, UI Development, HTML, HTML5 Developer, CSS, CSS3, SASS, React JS, Angular JS, Bootstrap, Bootstrap v3.0, Bootstrap v4.0, jQuery, Javascript, Senior UI Developer, 6+ years of experience in UI, Wesite Designing, Web Design, Web Technologies, Adode Photoshop, Adobe Illustrator, "
+    />
+    <meta name="author" content="Harshal Hari Mahajan" />
+
+    <meta property="og:image" content="http://imharshm.githhub.io/images/imharshm.png" />
+    <meta property="og:title" content="Harshal H. Mahajan | UI Developer " />
+    <meta property="og:description" content="React JS | Angular | jQuery | JavaScript ES6" />
+    <meta property="og:url" content="http://mharshm.githhub.io/" />
+
+    <title>Harshal H. Mahajan | UI Developer | Pune, Maharashtra</title>
+
+    <!-- Other browsers -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
+    <!-- MAC -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" type="image/png" />
+    <!-- IE -->
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +59,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
