--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#323232" />
     <meta name="full-screen" content="yes" />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png" />
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/logo192.png" />
 
     <meta
       name="description"
@@ -31,19 +31,21 @@
     />
     <meta name="author" content="Harshal Hari Mahajan" />
 
-    <meta property="og:image" content="http://imharshm.githhub.io/images/imharshm.png" />
-    <meta property="og:title" content="Harshal H. Mahajan | UI Developer " />
-    <meta property="og:description" content="React JS | Angular | jQuery | JavaScript ES6" />
-    <meta property="og:url" content="http://mharshm.githhub.io/" />
+    <meta property="og:image" content="http://imharshm.githhub.io/portfolio/imharshm.png" />
+    <meta property="og:title" content="Harshal H. Mahajan | UI Developer" />
+    <meta property="og:description" content="React JS | JavaScript ES6 | Angular | jQuery" />
+    <meta property="og:url" content="http://imharshm.githhub.io/" />
 
     <title>Harshal H. Mahajan | UI Developer | Pune, Maharashtra</title>
 
-    <!-- Other browsers -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
-    <!-- MAC -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" type="image/png" />
     <!-- IE -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
+    <!-- Other browsers -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
+    <link rel="icon" sizes="192x192" href="%PUBLIC_URL%/logo192.png" type="image/png" />
+    <link rel="icon" sizes="512x512" href="%PUBLIC_URL%/logo512.png" type="image/png" />
+    <!-- MAC -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" type="image/png" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
