--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     />
     <meta name="author" content="Harshal Hari Mahajan" />
 
-    <meta property="og:image" content="http://imharshm.githhub.io/portfolio/imharshm.png" />
+    <meta property="og:image" content="http://imharshm.githhub.io/portfolio/imharshm.jpg" />
     <meta property="og:title" content="Harshal H. Mahajan | UI Developer" />
     <meta property="og:description" content="React JS | JavaScript ES6 | Angular | jQuery" />
     <meta property="og:url" content="http://imharshm.githhub.io/" />
