--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
     />
     <meta name="author" content="Harshal Hari Mahajan" />
 
-    <meta property="og:image" content="http://imharshm.githhub.io/portfolio/imharshm.jpg" />
+    <meta property="og:image" content="https://imharshm.github.io/portfolio/imharshm.jpg" />
     <meta property="og:title" content="Harshal H. Mahajan | UI Developer" />
     <meta property="og:description" content="React JS | JavaScript ES6 | Angular | jQuery" />
-    <meta property="og:url" content="http://imharshm.githhub.io/" />
+    <meta property="og:url" content="https://imharshm.github.io/" />
 
     <title>Harshal H. Mahajan | UI Developer | Pune, Maharashtra</title>
 
