--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
     <meta property="og:title" content="Harshal H. Mahajan | UI Developer" />
     <meta property="og:description" content="React JS | JavaScript ES6 | Angular | jQuery" />
     <meta property="og:url" content="https://imharshm.github.io/" />
+    <meta property="og:type" content="website" />
 
     <title>Harshal H. Mahajan | UI Developer | Pune, Maharashtra</title>
 
