--- a/public/index.html
+++ b/public/index.html
@@ -13,17 +13,7 @@
 
     <meta
       name="description"
-      content="A result oriented 7+ years of professional experience in UI/ Front End Web Development using different types of Web Technologies.
-          Strong development and hands on experience in HTML5, CSS3, Media Queries, Bootstrap, JavaScript and jQuery.
-          Expertise in debugging and troubleshooting existing code using Firebug and Developer Tools.
-          Strong experience with Cross Browser Compatibility issues and Optimization for web, including CSS Sprites and best practices of Responsive Web Design (RWD).
-          Well experienced in using version control systems subversion (SVN).
-          Working experience in parallax scrolling single page websites and web portals.
-          Independent problem solving ability and easily adopting new technologies.
-          Working on E-Commence and Healthcare domain.
-          Good understanding of OOPS Concept and Database.
-          Good understanding of Web application development cycle.
-          Areas worked on - React JS, Angular, JavaScript, jQuery, Bootstrap, HTML5, CSS3/SASS/SCSS/LESS "
+      content="UI Developer with 7+ years of experience in Website Development, with different types of web technologies like React JS, JavaScript, HTML, CSS, SCSS and Bootstrap. Good Knowledge about Responsive Web Design and Cross browser compatibility."
     />
     <meta
       name="keywords"
